TestSuite/errors/err0094.pas
type TRec = record
a : file of TRec;
end;

var r : TRec;

begin
end.